--- a/website/src/pages/docs/basics/setting-fuse-up-manually.mdx
+++ b/website/src/pages/docs/basics/setting-fuse-up-manually.mdx
@@ -102,7 +102,7 @@ async function getUsers(ids: string[]): Promise<UserSource[]> {
 
 Note how the only code you had to write was the translation from the underlying data source to the shape of the data that you need. Fuse.js takes care of everything else for you.
 
-## Adding in-line hints and validation
+## Set up GraphQLSP to get IDE autocomplete
 
 You can use `@0no-co/graphqlsp` to get inline hints while authoring GraphQL documents, you can do so by installing it
 with `npm i --save-dev @0no-co/graphqlsp` and using the following in your `tsconfig.json`:
