Move setting fuse up manually out of basics

--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -32,7 +32,7 @@ pnpm create fuse-app
 ```sh
 yarn create fuse-app
 ```
-This will automatically set up Fuse.js for you, which consists of [five main steps](./basics/setting-fuse-up-manually.mdx):
+This will automatically set up Fuse.js for you, which consists of [five main steps](/docs/setting-fuse-up-manually):
 
 1. Install the npm packages
 2. Add the Next.js plugin to your `next.config.js`
