--- a/website/src/pages/docs/setting-fuse-up-manually.mdx
+++ b/website/src/pages/docs/setting-fuse-up-manually.mdx
@@ -1,6 +1,6 @@
 import { Steps, Callout } from 'nextra/components'
 
-# Setting fuse up manually
+# Setting up Fuse.js manually
 
 These steps are the same as what `create-fuse-app` does under the hood, we'll
 go over them so you know what the command does.
