Add explain component

--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -1,4 +1,5 @@
 import { Callout } from "nextra/components"
+import { Explain } from "@/components/Explain"
 
 # Querying from the client
 
@@ -216,7 +217,7 @@ with the same caveats.
 
 There are some best practices we strongly believe in while developing with `fuse`.
 
-### Co-locate your fragments
+### Co-locate your <Explain>fragments</Explain>
 
 When creating components it's useful to co-locate your data-requirements with your component,
 this way when you need more data for your component you know exactly where to add it and
