--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -53,4 +53,4 @@ Now, if you run `next dev` and open `localhost:3000/api/fuse` in the browser, yo
 
 </Steps>
 
-You've now got a Fuse.js data layer setup with your Next.js app! 🎉 Next, learn how to [query your Fuse.js data layer from the client](./docs/basics/client).
+You've now got a Fuse.js data layer setup with your Next.js app! 🎉 Next, learn how to [query your Fuse.js data layer from the client](./basics/client.mdx).
