--- a/website/src/pages/docs/basics/client.mdx
+++ b/website/src/pages/docs/basics/client.mdx
@@ -3,7 +3,10 @@ import { Explain } from "@/components/Explain"
 
 # Querying from the client
 
-Depending on whether you are querying data from [React Server Components](#react-server-components), a [client component in the app router](#client-components-app-router), or a [client component in the pages router](#client-components-pages-router), you will need to use a different set of data fetching helpers.
+Depending on whether you are querying data from [React Server Components](#react-server-components),
+a [client component in the app router](#client-components-app-router), or a
+[client component in the pages router](#client-components-pages-router), you will need to use a
+different set of data fetching helpers.
 
 ## Co-locate your <Explain>fragments</Explain>
 
