--- a/website/src/pages/docs/basics/client/best-practices.mdx
+++ b/website/src/pages/docs/basics/client/best-practices.mdx
@@ -1,3 +1,5 @@
+import { Callout } from "nextra/components"
+
 # Best practices
 
 There are some best practices we strongly believe in while developing with `fuse`.
