--- a/website/src/pages/docs/basics/client/index.mdx
+++ b/website/src/pages/docs/basics/client/index.mdx
@@ -9,7 +9,7 @@ different set of data fetching helpers.
 
 ## <Explain>Fragments</Explain>
 
-One of the pillars of `fuse` is Fragment co-location, we strongly believe that this patterns helps
+One of the pillars of `fuse` is Fragment <Explain term='colocation'>co-location</Explain>, we strongly believe that this patterns helps
 us get a better overview of our data-requirements and makes it easier to reason about the data
 a component will receive.
 
