just server components

--- a/website/src/pages/docs/basics/client/server-components.mdx
+++ b/website/src/pages/docs/basics/client/server-components.mdx
@@ -1,4 +1,4 @@
-# React Server Components
+# Server Components
 
 When using React server components, Fuse.js skips the intermediate step of reaching out to an
 API endpoint and instead executes the GraphQL directly in the server component renderer:
