--- a/website/src/pages/docs/index.mdx
+++ b/website/src/pages/docs/index.mdx
@@ -16,7 +16,7 @@ Before you start using Fuse.js, you need to have:
 - Basic familiarity with writing GraphQL queries*
 - A Next.js app**
 
-/***Note that we are working on improving the documentation so that Fuse.js doesn't even require basic familiarity with writing GraphQL queries */
+\***Note that we are working on improving the documentation so that Fuse.js doesn't even require basic familiarity with writing GraphQL queries *
 
 \**Note that a Fuse.js data layer can also be developed and deployed outside of Next.js. However, our current focus is on making the experience with Next.js great, so expect rough edges elsewhere.*
 
