--- a/website/src/pages/docs/data-layers/index.mdx
+++ b/website/src/pages/docs/data-layers/index.mdx
@@ -4,11 +4,11 @@ We think Fuse.js is the best library for building data layers at scale. However,
 
 ## What is a data layer?
 
-At scale, frontend & mobile teams need to be able to access data from many sources, including microservices, databases, and third-party APIs. However, there is a misalignment of needs between backend engineers and the frontend & mobile engineers.
+At scale, frontend teams need to be able to access data from many sources, including microservices, databases, and third-party APIs. However, there is a misalignment of needs between backend engineers and the frontend engineers.
 
 Backend services almost always expose data in a resource-based/CRUD manner via REST APIs, gRPC services, Apache Thrift, or similar technologies. But frontend teams need data shaped based on user needs, and those two things are often not the same.
 
-A data layer is a centralized place owned by frontend & mobile teams that empowers them to translate all the backing services into a single, unified API that matches what they need.
+A data layer is a centralized place owned by frontend teams that empowers them to translate all the backing services into a single, unified API that matches what they need.
 
 ## What other solutions have people tried?
 
