--- a/website/src/pages/docs/data-layers/vs-api-gateways.mdx
+++ b/website/src/pages/docs/data-layers/vs-api-gateways.mdx
@@ -2,6 +2,6 @@
 
 ![](/images/data-layers-vs-api-gateways.png)
 
-REST API Gateways combine a set of underlying microservices that each expose a REST API into one combined API. However, these APIs are passed through as-is, which means they more often than not don't match what frontend & mobile teams need.
+REST API Gateways combine a set of underlying microservices that each expose a REST API into one combined API. However, these APIs are passed through as-is, which means they more often than not don't match what frontend teams need.
 
-Data layers are a better solution because they allow frontend & mobile teams to translate those underlying APIs into what they need.
+Data layers are a better solution because they allow frontend teams to translate those underlying APIs into what they need.
