--- a/website/src/pages/docs/data-layers/vs-backend-for-frontends.mdx
+++ b/website/src/pages/docs/data-layers/vs-backend-for-frontends.mdx
@@ -2,8 +2,8 @@
 
 ![](/images/data-layers-vs-bffs.png)
 
-Just like data layers, BFFs empower frontend & mobile teams to build that translation layer between backend and clients themselves. However, with BFFs each client team builds their own translation layer, which means that you end up with many different translation layers that are all doing the same thing.
+Just like data layers, BFFs empower frontend teams to build that translation layer between backend and clients themselves. However, with BFFs each client team builds their own translation layer, which means that you end up with many different translation layers that are all doing the same thing.
 
 This is wasteful and also puts a large burden on the DevOps team to maintain/secure/scale all of these different services.
 
-If you squint, building a data layer is like building "one central BFF" that is shared between all frontend & mobile teams to avoid this wasteful duplication and impact on the rest of the organization.
+If you squint, building a data layer is like building "one central BFF" that is shared between all frontend teams to avoid this wasteful duplication and impact on the rest of the organization.
