--- a/website/src/pages/docs/data-layers/vs-graphql-federation.mdx
+++ b/website/src/pages/docs/data-layers/vs-graphql-federation.mdx
@@ -6,4 +6,4 @@ At its core, GraphQL Federation composes a central GraphQL API from many differe
 
 In practice, this falls short because it forces backend engineers to have to learn GraphQL and then build an API that matches user needs — even though that's not how they think about their data and they don't benefit from it.
 
-Data layers are a better solution because they have the people that benefit from the work (frontend & mobile teams that want GraphQL) do the work themselves in the way that they need to, while backend engineers can keep exposing the resource-based APIs that they know and love.
+Data layers are a better solution because they have the people that benefit from the work (frontend teams that want GraphQL) do the work themselves in the way that they need to, while backend engineers can keep exposing the resource-based APIs that they know and love.
