add ending note

--- a/website/src/pages/docs/basics/mocking.mdx
+++ b/website/src/pages/docs/basics/mocking.mdx
@@ -86,3 +86,6 @@ addMutationFields(t => ({
   })
 }))
 ```
+
+When the back-end implements the URL whwere we can fetch the author we can remove the mock
+and the UI will start working with the real data.
