--- a/website/src/pages/docs/basics/context.mdx
+++ b/website/src/pages/docs/basics/context.mdx
@@ -12,6 +12,8 @@ By default we will expose `params` and `headers` on the context object. If you w
 adding it to the function invocation of your API handler.
 
 ```ts
+import { createAPIRouteHandler } from 'fuse/next'
+
 createAPIRouteHandler<{ userAgent: string }>({
   context: (ctx) => {
     return {
@@ -31,6 +33,7 @@ We'll have to pass these in with the second argument of our `execute` function.
 
 ```ts
 import { headers } from 'next/headers'
+import { createAPIRouteHandler } from '@/fuse/server'
 
 execute({
   query: x,
@@ -52,6 +55,8 @@ In our <Explain term='fields'>fields</Explain> there are two opportunities we ha
 below you can find an example of both.
 
 ```ts
+import { node, addQueryFields, AuthenticationError } from 'fuse'
+
 const UserNode = node<UserSource>({
   name: 'User',
   load: async (ids, ctx) => ctx.isAdmin ? getUsers(ids) : [],
@@ -80,7 +85,7 @@ addQueryFields((t) => ({
         return context.userId
       }
 
-      throw new UnauthenticatedError('You must be logged in.')
+      throw new AuthenticationError('You must be logged in.')
     },
   }),
 }))
