--- a/website/src/pages/docs/data-layers/vs-backend-for-frontends.mdx
+++ b/website/src/pages/docs/data-layers/vs-backend-for-frontends.mdx
@@ -1,6 +1,6 @@
 # Backend-for-Frontends (BFFs) vs. Data layers
 
-![](/images/data-layers-vs-bffs.png)
+![This shows on the left the classic workflow where we have boxes representing 'mobile', 'iOS' and 'web' development teams. These boxes all individually connect to their own BFF box which in turn connect to all the datasources of the backend teams. On the right we have the 'fuse.js' diagram where all the frontend teams connect to a node called 'fuse.js' which in turn connects all backend datasources.](/images/data-layers-vs-bffs.png)
 
 One of the most widely adopted solutions today is using backend-for-frontends (BFFs), where each frontend has its own backend service that transforms the underlying backend APIs tailored to the bespoke requirements of that frontend.
 
