fix broken link

--- a/website/src/pages/docs/basics/nodes.mdx
+++ b/website/src/pages/docs/basics/nodes.mdx
@@ -15,7 +15,7 @@ A `node` will define its <Explain>fields</Explain>, this is what it will expose 
 translation of properties on the `Resource`, computed properties or just plainly expose the property as-is. Every field is <Explain term='nullability'>nullable</Explain> by default,
 unless you explicitly define it as non-nullable by means of `nullable: false`.
 
-Let's look at the example of the [Getting Started](../index.mdx) guide:
+Let's look at the example of the [Getting Started](/docs) guide:
 
 ```ts
 import { node } from 'fuse'
