clear up inconsistency

--- a/website/src/pages/docs/data-layers/index.mdx
+++ b/website/src/pages/docs/data-layers/index.mdx
@@ -8,7 +8,7 @@ A data layer is a dedicated service between the backend APIs and the clients. Cr
 
 Data layers allow engineering teams to move at optimal speed. They achieve this by solving three core problems at the interface between backend and frontend:
 
-### Problem 1: Backend engineers think about resources, but frontend teams think about user interfaces
+### Problem 1: Backend engineers think about resources, but frontend engineers think about user interfaces
 
 Whether it's databases or microservices, resources are at the core of a backend engineer’s work. Frontend engineers, however, focus on bringing user stories and experiences to life.
 
